@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.3
 Date: ????
+  Minor Features:
+    - Added compatibility for SimpleSeablock. Stone and Coal still are base resources due to rocks still getting autoplaced, but that's not easy to fix.
   Bugfixes:
     - No longer considers resources disabled during map creation as available
 ---------------------------------------------------------------------------------------------------
